[gd_scene load_steps=35 format=2]

[ext_resource path="res://entities/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://system/parts/part_entity_spawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://system/parts/level/part_player_camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://system/parts/level/part_level_groups.tscn" type="PackedScene" id=4]
[ext_resource path="res://system/parts/level/arena/part_arena.tscn" type="PackedScene" id=5]
[ext_resource path="res://world/level1/tilemap/level1_tilemap.tscn" type="PackedScene" id=6]
[ext_resource path="res://system/components/callers/comp_method_caller.tscn" type="PackedScene" id=7]
[ext_resource path="res://system/parts/entity/part_camera_control.tscn" type="PackedScene" id=8]
[ext_resource path="res://system/components/receivers/comp_event_receiver.tscn" type="PackedScene" id=9]
[ext_resource path="res://entities/frog/frog_arena_data.tres" type="Resource" id=10]
[ext_resource path="res://system/data/level_data.gd" type="Script" id=11]
[ext_resource path="res://world/level1/houses/mushroom_house_short.tscn" type="PackedScene" id=12]
[ext_resource path="res://world/level1/houses/mushroom_house_tall.tscn" type="PackedScene" id=13]
[ext_resource path="res://entities/fire_ant/fire_ant_arena_data.tres" type="Resource" id=14]
[ext_resource path="res://entities/worm/worm_arena_data.tres" type="Resource" id=15]
[ext_resource path="res://system/random_scripts/timer_controller.gd" type="Script" id=16]
[ext_resource path="res://system/parts/level/music_manager.tscn" type="PackedScene" id=17]
[ext_resource path="res://entities/ant_soldier/ant_soldier_arena_data.tres" type="Resource" id=18]
[ext_resource path="res://scenes/levels/level1/rock_spawners.gd" type="Script" id=19]
[ext_resource path="res://music/ant_raid/ant_raid.ogg" type="AudioStream" id=20]
[ext_resource path="res://world/level1/vegetation/trees/tree1.png" type="Texture" id=21]
[ext_resource path="res://world/level1/vegetation/trees/tree0.png" type="Texture" id=22]
[ext_resource path="res://world/level1/tilemap/fences_tilemap.png" type="Texture" id=23]
[ext_resource path="res://scenes/levels/level1/saving_flag_spawner.gd" type="Script" id=24]

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=3]
0/name = "fences_tilemap.png 0"
0/texture = ExtResource( 23 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 48, 48 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 176, Vector2( 0, 1 ), 146, Vector2( 0, 2 ), 50, Vector2( 1, 0 ), 56, Vector2( 2, 0 ), 152, Vector2( 2, 2 ), 26 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 4 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "start"
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1.5, 1.5 ) ]
}

[node name="level1" type="Node2D"]
script = ExtResource( 11 )
level_name = "level1"

[node name="sound_streams" type="Node2D" parent="." groups=["sound_streams"]]

[node name="music_manager" parent="." instance=ExtResource( 17 )]
track_list = [ ExtResource( 20 ) ]
stream_mode = 2

[node name="level1_tilemap" parent="." instance=ExtResource( 6 )]
tile_data = PoolIntArray( -720891, 0, 0, -720890, 0, 0, -720889, 0, 0, -720880, 0, 0, -655356, 0, 0, -655355, 0, 0, -655348, 0, 0, -655347, 0, 0, -655346, 0, 0, -655345, 0, 0, -655337, 0, 0, -655336, 0, 0, -655335, 0, 0, -524297, 0, 0, -524296, 0, 0, -524295, 0, 0, -524294, 0, 0, -524293, 0, 0, -589820, 0, 0, -589818, 0, 0, -589816, 0, 0, -589815, 0, 0, -589803, 0, 0, -589802, 0, 0, -524288, 0, 0, -524287, 0, 0, -524286, 0, 0, -524285, 0, 0, -524283, 2, 0, -524281, 0, 0, -524277, 2, 0, -524273, 2, 0, -524272, 0, 0, -393229, 0, 0, -393228, 0, 0, -393227, 0, 0, -393221, 2, 0, -393220, 0, 0, -393218, 0, 0, -393217, 1, 0, -458751, 0, 0, -458750, 1, 0, -458748, 0, 0, -458746, 0, 0, -458745, 0, 0, -458740, 0, 0, -458739, 2, 0, -458738, 0, 0, -458737, 0, 0, -458736, 0, 0, -458735, 0, 0, -327693, 0, 0, -327688, 2, 0, -327687, 0, 0, -327686, 0, 0, -327685, 0, 0, -393216, 0, 0, -393214, 2, 0, -393213, 0, 0, -393205, 2, 0, -393204, 0, 0, -393203, 1, 0, -393202, 0, 0, -393201, 2, 0, -393197, 0, 0, -393190, 0, 0, -393189, 0, 0, -262155, 0, 0, -262152, 0, 0, -262151, 2, 0, -262150, 1, 0, -262149, 2, 0, -262148, 0, 0, -327678, 2, 0, -327677, 0, 0, -327672, 2, 0, -327671, 0, 0, -327668, 1, 0, -327667, 0, 0, -327666, 1, 0, -327665, 0, 0, -327662, 0, 0, -327661, 0, 0, -327660, 0, 0, -196617, 0, 0, -196616, 1, 0, -196614, 0, 0, -196611, 0, 0, -196610, 0, 0, -262143, 0, 0, -262140, 0, 0, -262135, 0, 0, -262134, 0, 0, -262130, 2, 0, -262127, 0, 0, -262126, 1, 0, -262125, 0, 0, -262121, 0, 0, -131083, 0, 0, -131082, 0, 0, -131081, 0, 0, -131077, 2, 0, -131076, 1, 0, -131074, 0, 0, -196590, 0, 0, -196589, 1, 0, -196584, 0, 0, -65545, 0, 0, -65541, 2, 0, -65540, 0, 0, -131071, 2, 0, -131070, 0, 0, -131066, 2, 0, -131065, 0, 0, -131062, 0, 0, -131061, 2, 0, -131059, 0, 0, -131058, 2, 0, -131055, 0, 0, -131052, 2, 0, -131047, 0, 0, -9, 0, 0, -7, 0, 0, -6, 2, 0, -5, 0, 0, -4, 2, 0, -65536, 1, 0, -65535, 0, 0, -65532, 2, 0, -65531, 0, 0, -65530, 1, 0, -65526, 0, 0, -65525, 0, 0, -65524, 1, 0, -65522, 0, 0, -65521, 2, 0, -65516, 1, 0, -65515, 0, 0, 65527, 2, 0, 65529, 0, 0, 65530, 1, 0, 65531, 0, 0, 65535, 2, 0, 0, 3, 0, 4, 1, 0, 5, 0, 0, 7, 0, 0, 11, 2, 0, 14, 0, 0, 15, 0, 0, 19, 2, 0, 21, 1, 0, 27, 0, 0, 131059, 0, 0, 131061, 1, 0, 131064, 0, 0, 131068, 2, 0, 131070, 2, 0, 131071, 0, 0, 65536, 2, 0, 65546, 0, 0, 65548, 0, 0, 65549, 1, 0, 65550, 2, 0, 65551, 2, 0, 65553, 0, 0, 65555, 1, 0, 65557, 0, 0, 65563, 0, 0, 196595, 0, 0, 196600, 1, 0, 196601, 0, 0, 196603, 1, 0, 196607, 0, 0, 131072, 0, 0, 131081, 3, 0, 131082, 0, 0, 131084, 0, 0, 131085, 2, 0, 131086, 1, 0, 131087, 0, 0, 131088, 0, 0, 131089, 2, 0, 131095, 0, 0, 131099, 0, 0, 262130, 0, 0, 262131, 0, 0, 262137, 0, 0, 262142, 2, 0, 262143, 2, 0, 196609, 1, 0, 196610, 2, 0, 196614, 0, 0, 196615, 0, 0, 196616, 2, 0, 196617, 0, 0, 196622, 0, 0, 196624, 2, 0, 196628, 0, 0, 196631, 0, 0, 196635, 0, 0, 327666, 0, 0, 327671, 1, 0, 327678, 1, 0, 327679, 2, 0, 262146, 0, 0, 262149, 0, 0, 262150, 0, 0, 262152, 0, 0, 262155, 0, 0, 262156, 0, 0, 262159, 2, 0, 262160, 0, 0, 262161, 0, 0, 262164, 0, 0, 262165, 0, 0, 262168, 0, 0, 393205, 1, 0, 393207, 0, 0, 393214, 0, 0, 327690, 2, 0, 327691, 2, 0, 327692, 1, 0, 327693, 2, 0, 327694, 0, 0, 327695, 1, 0, 327696, 0, 0, 327697, 2, 0, 327701, 0, 0, 327702, 0, 0, 327704, 0, 0, 458742, 0, 0, 458751, 2, 0, 393217, 1, 0, 393218, 0, 0, 393227, 1, 0, 393229, 0, 0, 393231, 0, 0, 393232, 2, 0, 393238, 0, 0, 393240, 0, 0, 524278, 0, 0, 458752, 0, 0, 458753, 0, 0, 458755, 0, 0, 458758, 2, 0, 458759, 0, 0, 458760, 0, 0, 458763, 0, 0, 458764, 0, 0, 458766, 0, 0, 458770, 0, 0, 458771, 0, 0, 589813, 0, 0, 589814, 0, 0, 589819, 0, 0, 524289, 0, 0, 524290, 1, 0, 524292, 1, 0, 524295, 0, 0, 524296, 1, 0, 524299, 0, 0, 524300, 2, 0, 524301, 0, 0, 524302, 2, 0, 524305, 0, 0, 524306, 0, 0, 524316, 0, 0, 589834, 0, 0, 589843, 0, 0, 589844, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655372, 0, 0, 655373, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655381, 0, 0, 655382, 0, 0, 655385, 0, 0, 786425, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720909, 0, 0, 720910, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720917, 0, 0, 720918, 0, 0, 720920, 0, 0, 720921, 0, 0, 720922, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786437, 0, 0, 786438, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 917494, 0, 0, 917500, 0, 0, 917501, 0, 0, 851983, 0, 0, 851984, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 983031, 0, 0, 983036, 0, 0, 983038, 0, 0, 917514, 0, 0, 917515, 0, 0, 1048574, 0, 0, 983049, 0, 0, 983050, 0, 0, 983054, 0, 0, 983055, 0, 0, 983060, 0, 0, 983067, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048599, 0, 0, 1048603, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114139, 0, 0, 1179675, 0, 0 )

[node name="fences" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
cell_y_sort = true
collision_layer = 129
collision_mask = 129
format = 1
tile_data = PoolIntArray( -327674, 0, 0, -327673, 0, 1, -327672, 0, 1, -327671, 0, 1, -327670, 0, 1, -327669, 0, 1, -327668, 0, 1, -327667, 0, 2, -196609, 0, 0, -262144, 0, 1, -262143, 0, 1, -262142, 0, 1, -262141, 0, 1, -262140, 0, 1, -262139, 0, 1, -262138, 0, 131074, -262131, 0, 131072, -262130, 0, 1, -262129, 0, 1, -262128, 0, 2, -131074, 0, 0, -131073, 0, 131074, -196592, 0, 131072, -196591, 0, 2, -65539, 0, 0, -65538, 0, 131074, -131055, 0, 65536, -3, 0, 65536, -65519, 0, 65536, 65533, 0, 65536, 17, 0, 65536, 131069, 0, 65536, 65552, 0, 0, 65553, 0, 131074, 196605, 0, 65536, 131088, 0, 65536, 262141, 0, 65536, 196624, 0, 65536, 327677, 0, 65536, 262160, 0, 131072, 262161, 0, 2, 393213, 0, 65536, 327697, 0, 65536, 458749, 0, 65536, 393233, 0, 65536, 524285, 0, 65536, 458769, 0, 65536, 589821, 0, 131072, 589822, 0, 2, 524305, 0, 65536, 655358, 0, 131072, 655359, 0, 1, 589824, 0, 2, 589839, 0, 0, 589840, 0, 1, 589841, 0, 131074, 655360, 0, 131072, 655361, 0, 1, 655362, 0, 1, 655363, 0, 1, 655364, 0, 2, 655371, 0, 0, 655372, 0, 1, 655373, 0, 1, 655374, 0, 1, 655375, 0, 131074, 720900, 0, 131072, 720901, 0, 2, 720906, 0, 0, 720907, 0, 131074, 786437, 0, 131072, 786438, 0, 1, 786439, 0, 1, 786440, 0, 1, 786441, 0, 1, 786442, 0, 131074 )

[node name="objects" type="YSort" parent="."]

[node name="decoration" type="YSort" parent="objects"]

[node name="houses" type="YSort" parent="objects/decoration"]

[node name="mushroom_house_short" parent="objects/decoration/houses" instance=ExtResource( 12 )]
position = Vector2( 128, -40 )
fire_lit = true

[node name="texture" parent="objects/decoration/houses/mushroom_house_short" index="0"]
flip_h = true

[node name="mushroom_house_short2" parent="objects/decoration/houses" instance=ExtResource( 12 )]
position = Vector2( 0, 136 )
fire_lit = true

[node name="mushroom_house_short3" parent="objects/decoration/houses" instance=ExtResource( 12 )]
position = Vector2( 128, 184 )
fire_lit = true

[node name="mushroom_house_short4" parent="objects/decoration/houses" instance=ExtResource( 12 )]
position = Vector2( 240, 0 )
fire_lit = true

[node name="mushroom_house_tall" parent="objects/decoration/houses" instance=ExtResource( 13 )]
fire_lit = true

[node name="mushroom_house_tall2" parent="objects/decoration/houses" instance=ExtResource( 13 )]
position = Vector2( 240, 136 )
fire_lit = true

[node name="texture" parent="objects/decoration/houses/mushroom_house_tall2" index="0"]
flip_h = true

[node name="trees" type="YSort" parent="objects/decoration"]

[node name="tree0_0" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( -115, 19 )
texture = ExtResource( 22 )

[node name="tree0_10" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( -217, 85 )
texture = ExtResource( 22 )

[node name="tree0_11" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( -130, 159 )
texture = ExtResource( 22 )

[node name="tree0_1" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 174, -122 )
texture = ExtResource( 22 )

[node name="tree0_2" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 323, -19 )
texture = ExtResource( 22 )

[node name="tree0_3" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 230, 215 )
texture = ExtResource( 22 )

[node name="tree0_6" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 131, 239 )
texture = ExtResource( 22 )

[node name="tree0_4" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( -55, 180 )
texture = ExtResource( 22 )

[node name="tree0_5" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 276, -105 )
texture = ExtResource( 22 )

[node name="tree0_7" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 387, 139 )
texture = ExtResource( 22 )

[node name="tree0_8" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( -116, -74 )
texture = ExtResource( 22 )

[node name="tree0_9" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 370, -75 )
texture = ExtResource( 22 )

[node name="tree1_0" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 7, -150 )
texture = ExtResource( 21 )

[node name="tree1_5" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 71, -107 )
texture = ExtResource( 21 )

[node name="tree1_1" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( -32, -82 )
texture = ExtResource( 21 )

[node name="tree1_2" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 321, 82 )
texture = ExtResource( 21 )

[node name="tree1_3" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( -84, 92 )
texture = ExtResource( 21 )

[node name="tree1_4" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 51, 213 )
texture = ExtResource( 21 )

[node name="tree1_6" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 384, 25 )
texture = ExtResource( 21 )

[node name="tree1_8" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 313, 200 )
texture = ExtResource( 21 )

[node name="tree1_10" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( -200, -110 )
texture = ExtResource( 21 )

[node name="tree1_11" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( -207, -12 )
texture = ExtResource( 21 )

[node name="tree1_12" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( -217, 184 )
texture = ExtResource( 21 )

[node name="tree1_13" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( -111, 254 )
texture = ExtResource( 21 )

[node name="tree1_14" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( -98, -148 )
texture = ExtResource( 21 )

[node name="tree1_15" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 461, -55 )
texture = ExtResource( 21 )

[node name="tree1_16" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 456, 77 )
texture = ExtResource( 21 )

[node name="tree1_20" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 443, 218 )
texture = ExtResource( 21 )

[node name="tree1_17" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 435, -139 )
texture = ExtResource( 21 )

[node name="tree1_18" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 339, -151 )
texture = ExtResource( 21 )

[node name="tree1_19" type="Sprite" parent="objects/decoration/trees"]
position = Vector2( 244, -188 )
texture = ExtResource( 21 )

[node name="entities" type="YSort" parent="objects"]

[node name="player" parent="objects/entities" instance=ExtResource( 1 )]
position = Vector2( 128, 64 )

[node name="part_camera_control" parent="objects/entities/player" instance=ExtResource( 8 )]

[node name="part_level_groups" parent="objects/entities" instance=ExtResource( 4 )]

[node name="rock_spawners" type="YSort" parent="objects"]
script = ExtResource( 19 )

[node name="Spawners" type="Node2D" parent="objects/rock_spawners"]

[node name="part_entity_spawner0" parent="objects/rock_spawners/Spawners" instance=ExtResource( 2 )]
position = Vector2( 48, 64 )
entity_name = "stone_drop"
entity_group = "drops"
deletion_signal = "interacted"
respawn = true
respawn_radius = Vector2( 40, 40 )

[node name="part_entity_spawner1" parent="objects/rock_spawners/Spawners" instance=ExtResource( 2 )]
position = Vector2( 72, 16 )
entity_name = "stone_drop"
entity_group = "drops"
deletion_signal = "interacted"
respawn = true
respawn_radius = Vector2( 40, 40 )

[node name="part_entity_spawner2" parent="objects/rock_spawners/Spawners" instance=ExtResource( 2 )]
position = Vector2( 128, 0 )
entity_name = "stone_drop"
entity_group = "drops"
deletion_signal = "interacted"
respawn = true
respawn_radius = Vector2( 40, 40 )

[node name="part_entity_spawner3" parent="objects/rock_spawners/Spawners" instance=ExtResource( 2 )]
position = Vector2( 184, 16 )
entity_name = "stone_drop"
entity_group = "drops"
deletion_signal = "interacted"
respawn = true
respawn_radius = Vector2( 40, 40 )

[node name="part_entity_spawner4" parent="objects/rock_spawners/Spawners" instance=ExtResource( 2 )]
position = Vector2( 208, 64 )
entity_name = "stone_drop"
entity_group = "drops"
deletion_signal = "interacted"
respawn = true
respawn_radius = Vector2( 40, 40 )

[node name="part_entity_spawner5" parent="objects/rock_spawners/Spawners" instance=ExtResource( 2 )]
position = Vector2( 184, 112 )
entity_name = "stone_drop"
entity_group = "drops"
deletion_signal = "interacted"
respawn = true
respawn_radius = Vector2( 40, 40 )

[node name="part_entity_spawner6" parent="objects/rock_spawners/Spawners" instance=ExtResource( 2 )]
position = Vector2( 128, 128 )
entity_name = "stone_drop"
entity_group = "drops"
deletion_signal = "interacted"
respawn = true
respawn_radius = Vector2( 40, 40 )

[node name="part_entity_spawner7" parent="objects/rock_spawners/Spawners" instance=ExtResource( 2 )]
position = Vector2( 72, 112 )
entity_name = "stone_drop"
entity_group = "drops"
deletion_signal = "interacted"
respawn = true
respawn_radius = Vector2( 40, 40 )

[node name="spawn_delay" type="Timer" parent="objects/rock_spawners"]
wait_time = 0.8
one_shot = true
script = ExtResource( 16 )

[node name="comp_event_receiver" parent="objects/rock_spawners" instance=ExtResource( 9 )]
emitter = "game_events"
event = "spawn_tutorial_stone"

[node name="part_arena" parent="objects" groups=["arena"] instance=ExtResource( 5 )]
FILLER_ENEMY = "ant"
enemy_spawn_data = [ ExtResource( 18 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 15 ) ]
number_of_waves = 8
number_of_extra_waves_per_gen = 4
enemies_per_wave = 3
time_between_waves = 5

[node name="spawners" type="Node2D" parent="objects/part_arena"]

[node name="part_entity_spawner" parent="objects/part_arena/spawners" instance=ExtResource( 2 )]
position = Vector2( 128, 0 )
entity_group = "enemies"
deletion_signal = "deleted"
respawn_radius = Vector2( 20, 20 )

[node name="part_entity_spawner2" parent="objects/part_arena/spawners" instance=ExtResource( 2 )]
position = Vector2( 64, 16 )
entity_group = "enemies"
deletion_signal = "deleted"
respawn_radius = Vector2( 20, 20 )

[node name="part_entity_spawner3" parent="objects/part_arena/spawners" instance=ExtResource( 2 )]
position = Vector2( 32, 64 )
entity_group = "enemies"
deletion_signal = "deleted"
respawn_radius = Vector2( 20, 20 )

[node name="part_entity_spawner4" parent="objects/part_arena/spawners" instance=ExtResource( 2 )]
position = Vector2( 64, 112 )
entity_group = "enemies"
deletion_signal = "deleted"
respawn_radius = Vector2( 20, 20 )

[node name="part_entity_spawner5" parent="objects/part_arena/spawners" instance=ExtResource( 2 )]
position = Vector2( 128, 128 )
entity_group = "enemies"
deletion_signal = "deleted"
respawn_radius = Vector2( 20, 20 )

[node name="part_entity_spawner6" parent="objects/part_arena/spawners" instance=ExtResource( 2 )]
position = Vector2( 192, 112 )
entity_group = "enemies"
deletion_signal = "deleted"
respawn_radius = Vector2( 20, 20 )

[node name="part_entity_spawner7" parent="objects/part_arena/spawners" instance=ExtResource( 2 )]
position = Vector2( 224, 64 )
entity_group = "enemies"
deletion_signal = "deleted"
respawn_radius = Vector2( 20, 20 )

[node name="part_entity_spawner8" parent="objects/part_arena/spawners" instance=ExtResource( 2 )]
position = Vector2( 192, 16 )
entity_group = "enemies"
deletion_signal = "deleted"
respawn_radius = Vector2( 20, 20 )

[node name="end_level_method" parent="objects/part_arena" instance=ExtResource( 7 )]
method = {
"args": [ "change_scene_request", "village_saved_screen", true, 2.0 ],
"caller": "game_events",
"method": "emit_signal"
}

[node name="ending_freeze_method" parent="objects/part_arena" instance=ExtResource( 7 )]
method = {
"args": [ "freeze_player" ],
"caller": "player_events",
"method": "emit_signal"
}

[node name="ending_slowmo_method" parent="objects/part_arena" instance=ExtResource( 7 )]
method = {
"args": [ 0.5 ],
"caller": "game_functions",
"method": "set_time_scale"
}

[node name="stop_slowmo_method" parent="objects/part_arena" instance=ExtResource( 7 )]
method = {
"args": [ 1.0 ],
"caller": "game_functions",
"method": "set_time_scale"
}

[node name="village_savior_archievement" parent="objects/part_arena" instance=ExtResource( 7 )]
method = {
"args": [ "archievement_made", "village_savior", false ],
"caller": "player_events",
"method": "emit_signal"
}

[node name="arena_start_delay" type="Timer" parent="objects/part_arena"]
wait_time = 0.5
one_shot = true
script = ExtResource( 16 )

[node name="delay_for_level_ending" type="Timer" parent="objects/part_arena"]
wait_time = 1.4
one_shot = true
script = ExtResource( 16 )

[node name="comp_event_receiver" parent="objects/part_arena" instance=ExtResource( 9 )]
emitter = "game_events"
event = "tutorial_finished"

[node name="spawn_tutorial_enemy" parent="objects/part_arena" instance=ExtResource( 9 )]
emitter = "game_events"
event = "spawn_tutorial_ant"

[node name="saving_flag_spawner" type="Node2D" parent="objects"]
script = ExtResource( 24 )

[node name="flag_spawner" parent="objects/saving_flag_spawner" instance=ExtResource( 2 )]
position = Vector2( 128, 64 )
entity_name = "saving_flag"
entity_group = "saving_flags"
deletion_signal = "deleted"
respawn_radius = Vector2( 40, 40 )

[node name="part_camera" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 128, 64 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="part_camera"]
autoplay = "start"
anims/RESET = SubResource( 1 )
anims/start = SubResource( 2 )

[connection signal="timeout" from="objects/rock_spawners/spawn_delay" to="objects/rock_spawners" method="spawn_tutorial_stones"]
[connection signal="event_received" from="objects/rock_spawners/comp_event_receiver" to="objects/rock_spawners/spawn_delay" method="start_timer"]
[connection signal="arena_ended" from="objects/part_arena" to="objects/part_arena/ending_freeze_method" method="call_method"]
[connection signal="arena_ended" from="objects/part_arena" to="objects/part_arena/ending_slowmo_method" method="call_method"]
[connection signal="arena_ended" from="objects/part_arena" to="objects/part_arena/delay_for_level_ending" method="start_timer"]
[connection signal="wave_started" from="objects/part_arena" to="objects/saving_flag_spawner" method="_on_part_arena_wave_started"]
[connection signal="timeout" from="objects/part_arena/arena_start_delay" to="objects/part_arena" method="start_arena"]
[connection signal="timeout" from="objects/part_arena/delay_for_level_ending" to="objects/part_arena/end_level_method" method="call_method"]
[connection signal="timeout" from="objects/part_arena/delay_for_level_ending" to="objects/part_arena/stop_slowmo_method" method="call_method"]
[connection signal="event_received" from="objects/part_arena/comp_event_receiver" to="objects/part_arena/arena_start_delay" method="start_timer"]
[connection signal="event_received" from="objects/part_arena/spawn_tutorial_enemy" to="objects/part_arena" method="spawn_new_enemy_uncounted"]
[connection signal="entity_spawned" from="objects/saving_flag_spawner/flag_spawner" to="objects/saving_flag_spawner" method="_on_flag_spawner_entity_spawned"]

[editable path="objects/decoration/houses/mushroom_house_short"]
[editable path="objects/decoration/houses/mushroom_house_tall2"]
[editable path="objects/part_arena/village_savior_archievement"]
